--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -15,6 +15,7 @@
             <li><a href="/about" >about</a></li>
             <li><a href="/hello">hello</a></li>
             <li><a href="/assos">assos</a></li>
+            <li><a href="/assos_edit"></a></li>
         </ul>
     </nav>
     {% block content %}{% endblock %}
