--- a/src/app/templates/assos.html
+++ b/src/app/templates/assos.html
@@ -2,6 +2,8 @@
 <title>Page assos</title>
 {% endblock %} {% block content %}
 <h1>Assos page</h1>
+<a href="{{ url_for('ajouter') }}" class="btn btn-primary btn-sm">Ajouter</a>
+
 <table class="table">
     <thead>
         <tr>
