--- a/src/app/static/styles.css
+++ b/src/app/static/styles.css
@@ -1,30 +1,136 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+/* Style général */
 
-}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    background: bisque;
-}
-.table {
-    width: 80%;
-    margin: 20px auto;
-}
-.table td, .table th {
-    border: 1px solid gray;
-    padding: 10px;
-}
-nav ul {
-    display: flex;
+body {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+    color: #333;
+  }
+  
+  a {
+    color: #333;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  /* Style de la navigation */
+  
+  nav {
+    background-color: #f8f8f8;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
+  }
+  
+  nav ul {
     list-style: none;
-    background: burlywood;
-    justify-content: space-around;
-}
-nav a {
-    text-decoration :none ;
-    color: aquamarine;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav li {
+    display: inline-block;
+  }
+  
+  nav a {
     display: block;
-    padding: 10px;
+    padding: 10px;
+  }
+  
+  nav a:hover {
+    background-color: #eee;
+  }
+  
+  /* Style de la table */
+  
+  .table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  
+  .table th,
+  .table td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .table th {
+    font-weight: bold;
+  }
+  
+  .table td {
+    vertical-align: top;
+  }
+  
+  /* Style des formulaires */
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  
+  input[type="text"],
+  textarea {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+  }
+  
+  button[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: #555;
+  }
+  
+  /* Style du graphique */
+  
+  #graph {
+    width: 100%;
+    height: 400px;
+  }
+
+  .button {
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    width: 120px; /* ajouter cette ligne pour fixer la largeur */
+    margin: auto;
+    cursor: pointer;
+    border-radius: 10px;
 }
+
+.button:hover {
+    background-color: #8BC34A;
+    transform: scale(1.1);
+    transition: all 0.3s ease;
+}
+
+  
+
+  
+  
+  
