modification nom de la page statistiques

--- a/src/app/templates/Dashboard.html
+++ b/src/app/templates/Dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}<title>Statistiques</title>{% endblock %}
+{% block title %}<title>Dashboard</title>{% endblock %}
 
 {% block content %}
   <h1>répartition des associations par gestion </h1>
