--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -18,7 +18,7 @@
             <li><a href="/about" >about</a></li>
             <li><a href="/hello">hello</a></li>
             <li><a href="/assos">assos</a></li>
-            <li><a href="/statistiques">statistiques</a></li>
+            <li><a href="/Dashboard">Dashboard</a></li>
             
         </ul>
     </nav>
